--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "webpack-dev-server": "^3.10.3",
     "webpack-pwa-manifest": "^4.2.0",
     "workbox-webpack-plugin": "^5.1.1"
-  }
+  },
+  "dependencies": {}
 }
