--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
     "webpack-pwa-manifest": "^4.2.0",
     "workbox-webpack-plugin": "^5.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "content-replace-webpack-plugin": "0.0.5"
+  }
 }
