--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ only:
 before_script:
   - npm install -g firebase-tools
 script:
-  - ./build.sh $APIKEYRECAPTCHA $APIKEYFIREBASE $APIKEYCUSTOMSEARCH
+  - ./build.sh $APIKEYRECAPTCHA $APIKEYFIREBASE $APIKEYCUSTOMSEARCH $SERVERKEYFCM
   - npm run build 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN
